--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,26 @@
 .bg {
   position: relative;
-  background-image: url(./img/security.jpg) no-repeat center center/cover;
+  background-image: url('./img/security.jpg');
   height: 100vh;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+
+.hero-text {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+}
+
+.nav-item a {
+  color: black !important;
+}
+.nav-item a:hover {
+  color: olive !important;
+  text-decoration: none;
 }
